# dferone

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Counter.cpp  Counter.h  Doxyfile  Doxyfile.in  GRASP_test.cpp  Profiler.cpp  README.md  console.h  random.h  ranges.h  streams.h  test.cpp  utilities.h  welford.h
.github/workflows/: ci.yml  docs.yml  release.yml
algorithms/: AlgorithmStatus.h  Filtering.h  LocalSearch.h  SolutionConstructor.h
containers/: BestSet.h  FiniteSet.h  Matrix.h  SymmetricMatrix.h  containers.h  tmp.h
dferone/: .cproject  .gitignore  .project  LICENSE  dferone.doxyfile
dferone/containers/: BestSet.h  FiniteSet.h
dferone/metaheuristics/: GRASP.h  Heuristic.h  Solver.h
dferone/metaheuristics/implementation/: Constructor.h  PathRelink.h  StopAfterNSeconds.h  StopCriterion.h
grasp/: AlgorithmStatus.h  AlgorithmVisitor.h  Filtering.h  GRASP.h  LocalSearch.h  SolutionConstructor.h
include/dferone/: Profiler.h  console.h  random.h  ranges.h  streams.h  tolerance.h  utilities.h  version.h.in  welford.h
include/dferone/algorithms/: AlgorithmStatus.h  AlgorithmVisitor.h  Filtering.h  GRASP.h  LocalSearch.h  SolutionConstructor.h
include/dferone/containers/: BestSet.h  FiniteSet.h  Matrix.h  SoterdVector.h  SymmetricMatrix.h  containers.h
src/: Counter.cpp  Profiler.cpp
tests/: CMakeLists.txt  test.cpp
